tools/clang/iterator_checker/tests/simple-resize.txt
simple-resize.cpp:13:4: error: [iterator-checker] Potentially invalid iterator used.
  *it;
   ^
1 error generated.
